<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_view.editor"
    tools:context=".EditorActivity">

    <LinearLayout style="@style/main_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/editor_head_image"
            android:src="@drawable/books" />

        <LinearLayout
            android:id="@+id/book_title"
            style="@style/field_layout">

            <TextView
                style="@style/editor_edit_text.text_view"
                android:layout_weight="1"
                android:text="@string/book_title" />

            <EditText
                android:id="@+id/book_title_field"
                style="@style/editor_edit_text"
                android:layout_weight="2"
                android:hint="@string/book_title_hint"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/supplier_name"
            style="@style/field_layout">

            <TextView
                style="@style/editor_edit_text.text_view"
                android:layout_weight="1"
                android:text="@string/supplier_name" />

            <LinearLayout
                style="@style/spinner_layout"
                android:layout_weight="2">

                <Spinner
                    android:id="@+id/supplier_spinner"
                    style="@style/spinner"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_number"
            style="@style/field_layout">

            <TextView
                style="@style/editor_edit_text.text_view"
                android:layout_weight="1"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/phone_number_field"
                style="@style/editor_edit_text"
                android:layout_weight="2"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:maxLength="14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantity"
            style="@style/field_layout">

            <TextView
                style="@style/editor_edit_text.text_view"
                android:layout_weight="1"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/quantity_field"
                style="@style/editor_edit_text"
                android:layout_weight="2"
                android:hint="@string/quantity_hint"
                android:inputType="number"
                android:maxLength="3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/price"
            style="@style/field_layout">

            <TextView
                style="@style/editor_edit_text.text_view"
                android:layout_weight="1"
                android:text="@string/price" />

            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/price_field"
                    style="@style/editor_edit_text.price"
                    android:hint="@string/price_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="5" />

                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/editor_edit_text.currency"
                    android:layout_alignEnd="@id/price_field"
                    android:paddingTop="@dimen/standard"
                    android:text="@string/price_label" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/image"
            style="@style/field_layout"
            android:layout_marginBottom="@dimen/double_standard">

            <TextView
                style="@style/editor_edit_text.text_view"
                android:layout_weight="1"
                android:text="@string/book_image" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/book_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/half"
                    android:contentDescription="@string/book_image_description" />

                <TextView
                    android:id="@+id/image_change_text"
                    style="@style/editor_image_text"
                    android:layout_toEndOf="@id/book_image" />

                <ImageView
                    android:id="@+id/arrow"
                    style="@style/editor_image_text.arrow"
                    android:layout_below="@id/image_change_text"
                    android:layout_toEndOf="@id/book_image"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>